--- a/react_frontend/public/index.html
+++ b/react_frontend/public/index.html
@@ -13,9 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap">
 
-    <title>React App</title>
+    <title>Portfolio</title>
     <script> window.token = "{{token}}"</script>
 </head>
 <body>
